// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kol-button should render with _label="Label" _ariaDescription="Aria Description" 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--normal kol-button--standalone">
      <button aria-describedby="nonce" class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
      <span class="visually-hidden" id="nonce">
        Aria Description
      </span>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" _disabled=false 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--normal kol-button--standalone">
      <button class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" _disabled=true 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--disabled kol-button--normal kol-button--standalone">
      <button class="kol-button__button" disabled="" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" _value="Hello" 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--normal kol-button--standalone">
      <button class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" _variant="danger" 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--danger kol-button--standalone">
      <button class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" _variant="ghost" 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--ghost kol-button--standalone">
      <button class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" _variant="normal" 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--normal kol-button--standalone">
      <button class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" _variant="primary" 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--primary kol-button--standalone">
      <button class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" _variant="secondary" 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--secondary kol-button--standalone">
      <button class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;

exports[`kol-button should render with _label="Label" 1`] = `
<kol-button>
  <template shadowrootmode="open">
    <div class="kol-button kol-button--normal kol-button--standalone">
      <button class="kol-button__button" type="button">
        <span class="kol-button__text kol-span">
          <span class="kol-span__container">
            <span class="kol-span__label">
              Label
            </span>
            <span aria-hidden="true" class="kol-span__slot" hidden="">
              <slot name="expert" slot="expert"></slot>
            </span>
          </span>
        </span>
      </button>
    </div>
  </template>
</kol-button>
`;
